# segway_sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
URDF/: WheelL.stl  WheelR.stl  cyberpod.urdf
drone_qp_matrices/qp_matrices/planningModelMatrices/: Alinear.txt  Blinear.txt
drone_qp_matrices/qp_matrices/tuning/: Q.txt  Qerr.txt  Qf.txt  x_constr.txt
include/: Eigen_embedded.h
include/Eigen_embedded/: Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  SPQRSupport  SVD  Sparse  SparseCholesky  SparseCore  SparseQR  SuperLUSupport  UmfPackSupport
include/Eigen_embedded/src/Core/: ArrayBase.h  CoreIterators.h  DenseBase.h  MathFunctions.h  MatrixBase.h
include/Eigen_embedded/src/Core/arch/SSE/: MathFunctions.h
include/Eigen_embedded/src/Core/products/: GeneralMatrixVector.h
include/Eigen_embedded/src/Core/util/: MKL_support.h  Macros.h
include/Eigen_embedded/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  RealSchur.h  SelfAdjointEigenSolver.h
include/Eigen_embedded/src/Geometry/: Umeyama.h
include/Eigen_embedded/src/IterativeLinearSolvers/: IncompleteLUT.h
include/Eigen_embedded/src/OrderingMethods/: Amd.h  Ordering.h
include/Eigen_embedded/src/SparseCholesky/: SimplicialCholesky_impl.h
include/Eigen_embedded/src/SparseCore/: SparseMatrixBase.h
include/Eigen_embedded/src/SparseLU/: SparseLU.h
include/Eigen_embedded/src/StlSupport/: StdDeque.h  StdList.h  StdVector.h
include/Eigen_embedded/src/misc/: lapack.h
include/segway_sim/: CyberTimer.hpp  common.hpp  controller_node.hpp  dynamics.hpp  dynamics_ekf.h  ekf.h  integrator_node.hpp  keyboard.hpp  low_level_node.hpp  manual_teleop_node.hpp  mpc_drone_node.hpp  mpc_node.hpp  sensor_node.hpp
launch/: README.md  drone_hardware.launch  hardware_mpc.launch  highLevelDrone.launch  highLevelMulti.launch  highLevelMulti_hw.launch  main.launch  mainMultiAgent.launch  manual_teleop.launch  moving_obstacle.launch  mpcDrone.launch  rviz.launch  rvizMultiAgent.launch  start_momdp.launch
matFiles/10x10_test/: J.mat  M.mat  Px.mat  V.mat  gridVar.mat
matFiles/2x2_test_1/: J.mat  M.mat  Px.mat  V.mat  gridVar.mat
matFiles/2x3_test_2/: J.mat  M.mat  Px.mat  V.mat  gridVar.mat
matFiles/2x3_test_3/: J.mat  M.mat  Px.mat  V.mat  gridVar.mat
matFiles/7x7/: J.mat  M.mat  Px.mat  V.mat  gridVar.mat
matFiles/movingObstacle/: J.mat  M.mat  Px.mat  V.mat  gridVar.mat
matFiles/test_5x5/: J.mat  M.mat  Px.mat  V.mat  gridVar.mat  stateMap.mat
msg/: cmd.msg  cmdDrone.msg  goalSetAndState.msg  highLevelBelief.msg  input.msg  linearMatrices.msg  lowLevelLog.msg  optSol.msg  sensor.msg  state.msg  stateDrone.msg  valFunCnst.msg
plotUtils/: barrier.npy  obstBelief.npy  plotGif.py  readBag.py  readExp.py  readMultiBag.py  readNewBag.py  readTBBag_exp.py  readTBMultiBag.py  test.npy
qp_matrices/planningModelMatrices/: Alinear.txt  Blinear.txt
qp_matrices/tuning/: Q.txt  Qerr.txt  Qf.txt  Qrate_Qdiff.txt  Qstate_rate.txt  R.txt  x_constr.txt
rviz/: 10x10.rviz  5x5.rviz  5x5_alt.rviz  6x6.rviz  multiAgents.rviz  newPointOfView.rviz
src/: MOMDP.py  controller_node.cpp  drone_mpc_python.py  ekf.cpp  ekf_node.cpp  highLevelDrone.py  integrator_node.cpp  keyboard.cpp  low_level_node.cpp  manual_teleop_node.cpp  momdpMultiAgent_node.py  momdp_node.py  momdp_python.py  momdp_python_obst.py  mpc_drone_node.cpp  mpc_node.cpp  sensor_node.cpp
src/pyFun/: MOMDP.py  PredictiveController.py  main.py  mainMulti.py  pyMOMDP.yml  utils.py
src/workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
srv/: ui.srv
workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
