<?xml version="1.0"?>

<package format="2">
	<name>segway_sim</name>
	<version>0.1.0</version>
	<description>The segway_sim package</description>
	
	<maintainer email="asinglet@caltech.edu">Drew</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>ambercortex_ros</depend>
	<!-- <depend>uav_sim_ros</depend> -->
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>message_generation</depend>
	<depend>tf</depend>
	<exec_depend>message_runtime</exec_depend>

	<export>
	</export>
</package>
